--- a/BowlingKata.csproj
+++ b/BowlingKata.csproj
@@ -49,10 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BDD\BowlingGameExamples.cs" />
     <Compile Include="BowlingGame.cs" />
-    <Compile Include="BowlingGameExamples.cs" />
-    <Compile Include="BowlingGameTests.cs" />
+    <Compile Include="Fixtures\FinalScore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDD\BowlingGameTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
